[api] feat(payment)
- added scaffold dentist endpoints
- added tests
- added repository
-
